--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <div class="container">
+    <main class="container">
         <img class="qrcode" src="images/qr-code.png" alt="QR-Code that points to https://www.frontendmentor.io/">
         <h2 class="heading">Improve your front-end skills by building projects</h2>
         <p class="paragraph">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
-    </div>
+    </main>
 </body>
 </html>
