--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main class="container">
         <img class="qrcode" src="images/qr-code.png" alt="QR-Code that points to https://www.frontendmentor.io/">
-        <h1 class="heading">Improve your front-end skills by building projects</h1>
+        <h1 role="heading" aria-level="1" class="heading">Improve your front-end skills by building projects</h1>
         <p class="paragraph">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
     </main>
 </body>
